[tool.poetry]
name = "simple-stopwatch"
version = "0.1.0"
description = "Simple stop watch, allowing for timing of a number of tasks."
readme = 'README.md'
authors = ["changjian.zcj <changjian.zcj@antfin.com>"]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
